# LiDAR-Tracking

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: params.yaml  patchworkpp_hesai.yaml  patchworkpp_origin.yaml
include/: utils.hpp
include/cloud_segmentation/: cloud_segmentation.hpp
include/patchworkpp/: patchworkpp.hpp  utils.hpp
include/track/: track.h
include/tracking/: tracking.hpp
include/undistortion/: gyr_int.h
integration/: evaluate.py  integration.py  integration_casey.rviz  utils.py
launch/: demo.launch  demo_casey.launch  integration.launch  tracking.launch
map/: global_path.py  songdo-campus.json  songdo.json
msg/: AdjacentVehicle.msg
rviz/: casey.rviz  hesai.rviz  integration.rviz  integration2.rviz  integration_casey.rviz
scripts/: integration.py
scripts/lib/: utils.py
scripts/tools/: gt.py  integration_bag.py
src/: AgeVelocityExtractor.py  cloud_segmentation.cpp  graph.py  inspva_to_imu.py  lidar_to_camera_projection.cpp  tracking.cpp  tracking_origin.cpp
src/lib/: track.cpp
time_log/cloud_segmentation/: average.txt  clustering.txt  crop.txt  downsampling.txt  lshape.txt  removalground.txt  undistortion.txt
time_log/tracking/: average.py  average.txt  correction.txt  crophdmap.txt  integration.txt  tracking.txt  transform.txt
urdf/: lexus.urdf  mesh_car.dae
