<?xml version="1.0"?>
<package format="2">
  <name>lidar_tracking</name>
  <version>0.0.0</version>
  <description>lidar_tracking</description>

  <maintainer email="rbtjr98@inha.edu">GyuSeok Lee</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>  
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <export>

  </export>
</package>
